# make-planning-notes-for-nate

./: .env  .env.template  .gitignore  README.md  hello.py  pyproject.toml  remove_scheduled_job.sh  schedule_commit_summary.sh  test_get_commits.ipynb
.github/workflow/: send-biweekly-notes.yaml
.github/workflows/: send-biweekly-notes.yaml
src/: get_commit_summary.py  get_python_commits.py
