[tool.poetry]
name = "make-planning-notes-for-nate"
version = "0.1.0"
description = ""
authors = ["Shaun Porwal <shaun.porwal@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
